@@ -67,6 +67,9 @@ Branch YARN-2928: Timeline Server Next Generation: Phase 1
     YARN-3134. Implemented Phoenix timeline writer to access HBase backend. (Li
     Lu via zjshen)
 
+    YARN-3529. Added mini HBase cluster and Phoenix support to timeline service
+    v2 unit tests. (Li Lu via zjshen)
+
   IMPROVEMENTS
 
   OPTIMIZATIONS
